# sok

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
config/: settings.ini
include/: array.hpp  engine.h  gamemap.h  util.h
maps/: 1.txt  2.txt
modules/: Findinih.cmake
pack/: CMakeLists.txt
pack/include/: pack.h
pack/src/: pack-main.cpp  pack.cpp
sok/: CMakeLists.txt
sok/include/: data.h  engine.h  gamemap.h  load.h
sok/src/: data.cpp  engine.cpp  gamemap.cpp  load.cpp  main.cpp
src/: engine.cpp  gamemap.cpp  util.cpp
util/: CMakeLists.txt  util.cpp  util.h
